# idp-engine

./: .gitignore  CMakeLists.txt  README.md  code_structure.text
.cache/clangd/index/: blur.cpp.A8C2EDFB72A32852.idx  blur.hpp.087837AF970FFEAD.idx  brightness.cpp.5D0A57D0135DF3A1.idx  brightness.hpp.59D66F7D6EAECAFA.idx  grayscale.cpp.55AB592165A4C5F1.idx  grayscale.hpp.31BAAC007EA696C3.idx  main.cpp.54FA7EFEC399E876.idx  resolution.cpp.93F94BF1CF2DB0E5.idx  result.hpp.6EB44C04E6203908.idx  status.cpp.B011FBE89827AC98.idx  status.hpp.A1F0527155BAA25C.idx
include/idp/assessment/: blur.hpp  brightness.hpp  resolution.hpp  result.hpp  status.hpp
include/idp/document/: contour_detector.hpp  document_detector.hpp  edge_detector.hpp  polygon_approximator.hpp  result.hpp  types.hpp
include/idp/image/: contrast.hpp  denoise.hpp  grayscale.hpp  sharpen.hpp  threshold.hpp
include/idp/quality/: blur.hpp  brightness.hpp  resolution.hpp  result.hpp  status.hpp
src/: main.cpp
src/idp/assessment/: blur.cpp  brightness.cpp  resolution.cpp  status.cpp
src/idp/document/: contour_detector.cpp  document_detector.cpp  edge_detector.cpp  polygon_approximator.cpp
src/idp/image/: contrast.cpp  denoise.cpp  grayscale.cpp  sharpen.cpp  threshold.cpp
src/idp/quality/: blur.cpp  brightness.cpp  resolution.cpp  status.cpp
